--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 </head>
 <body>
     <div class="contenedor-formulario">
-        <h1>Formulario de Compra</h1>
-        <p>Llena los datos para realizar tu pedido de carne.</p>
+        <h1>Realiza tu compra</h1>
+        <p>Llena los datos para realizar tu pedido de carne y ponernos en contacto contigo.</p>
         <form action="#" method="post">
             <!-- Datos personales -->
             <label for="nombre">Nombre:</label>
@@ -101,7 +101,7 @@
             <input type="text" id="fecha_entrega" name="fecha_entrega" placeholder="Escribe la fecha de entrega" required>
 
             <label for="comentarios">Comentarios Adicionales:</label>
-            <textarea id="comentarios" name="comentarios" placeholder="Escribe algún detalle adicional o comentario"></textarea>
+            <textarea id="comentarios" name="comentarios" placeholder="Escribe algún detalle adicional"></textarea>
 
             <!-- Botón de envío -->
             <button type="submit">Realizar Pedido</button>
