--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <input type="text" id="fecha_entrega" name="fecha_entrega" placeholder="Escribe la fecha de entrega" required>
 
             <label for="comentarios">Comentarios Adicionales:</label>
-            <textarea id="comentarios" name="comentarios" placeholder="Escribe algún detalle adicional"></textarea>
+            <textarea id="comentarios" name="comentarios" placeholder="Escribe algún detalle adicional a tu compra"></textarea>
 
             <!-- Botón de envío -->
             <button type="submit">Realizar Pedido</button>
