--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 </head>
 <body>
     <div class="contenedor-formulario">
+        <form action="https://example.com/submit_pedido">
         <h1>Realiza tu compra</h1>
         <p>Llena los datos para realizar tu pedido de carne y ponernos en contacto contigo.</p>
         <form action="#" method="post">
