--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <label for="fecha_entrega">Fecha de Entrega:</label>
             <input type="text" id="fecha_entrega" name="fecha_entrega" placeholder="Escribe la fecha de entrega" required>
 
-            <label for="comentarios">Comentarios Adicionales:</label>
+            <label for="comentarios">Comentarios:</label>
             <textarea id="comentarios" name="comentarios" placeholder="Escribe algún detalle adicional a tu compra"></textarea>
 
            
