--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </head>
 <body>
     <div class="contenedor-formulario">
-        <form action="https://example.com/submit_pedido">
+        <form action="https://ximenamd.github.io/tarjeta.html/">
         <h1>Realiza tu compra</h1>
         <p>Llena los datos para realizar tu pedido de carne y ponernos en contacto contigo.</p>
         <form action="#" method="post">
@@ -102,7 +102,7 @@
             <input type="text" id="fecha_entrega" name="fecha_entrega" placeholder="Escribe la fecha de entrega" required>
 
             <label for="comentarios">Comentarios:</label>
-            <textarea id="comentarios" name="comentarios" placeholder="Escribe algún detalle adicional a tu compra"></textarea>
+            <textarea id="comentarios" name="comentarios" placeholder="Agrega algún detalle a tu compra."></textarea>
 
            
             <button type="submit">Ordenar</button>
