--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             text-align: left; 
         }
         input, textarea, button {
+            font-family: 'Arial', sans-serif;
             width: 100%; 
             max-width: 360px; 
             padding: 10px;
@@ -60,6 +61,7 @@
             outline: none;
         }
         textarea {
+            font-family: 'Arial', sans-serif;
             resize: none;
             height: 100px;
         }
