--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <input type="text" id="fecha_entrega" name="fecha_entrega" placeholder="Escribe la fecha de entrega" required>
 
             <label for="comentarios">Comentarios:</label>
-            <textarea id="comentarios" name="comentarios" placeholder="Agrega algún detalle a tu compra."></textarea>
+            <textarea id="comentarios" name="comentarios" placeholder="Agrega detalles a tu compra..."></textarea>
 
            
             <button type="submit">Ordenar</button>
