--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #8D6F64;
+            background-color: #4c2609;
             margin: 0;
             padding: 0;
             display: flex;
